 fdo#66281 - make underbrace/overbrace stretchy in MathML export

Change-Id: I63608cc4b56f6baa4101020c12c1384a828ce0d2
Reviewed-on: https://gerrit.libreoffice.org/4629
Reviewed-by: Bosdonnat Cedric <cedric.bosdonnat@free.fr>
Tested-by: Bosdonnat Cedric <cedric.bosdonnat@free.fr>